# cppplumberd

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
build_local/: CMakeCache.txt
cmake/: cppplumberdConfig.cmake.in
docs/: README.md
docs/done/: 000-project-structure.md
docs/rules/: README.md
docs/todo/: 002.design.md
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  README.md  client.cpp  contract.h  interfaces.hpp  messages.proto  server.cpp
examples/app/proto/: example.proto  gst.proto  messages.proto
examples/helloworld/: CMakeLists.txt  main.cpp
include/: plumberd.hpp
include/cppplumberd/: calculator.hpp  command_bus.hpp  command_service_handler.hpp  contract.h  cqrs_abstractions.hpp  event_store.hpp  fault_exception.hpp  message_dispatcher.hpp  message_serializer.hpp  proto_frame_buffer.hpp  proto_publish_handler.hpp  proto_req_rsp_client_handler.hpp  proto_req_rsp_srv_handler.hpp  proto_subscribe_handler.hpp  stop_watch.hpp  transport_interfaces.hpp  utils.hpp
include/cppplumberd/nng/: ngg_publish_socket.hpp  ngg_req_rsp_client_socket.hpp  ngg_req_rsp_server_socket.hpp  ngg_socket_factory.hpp  ngg_subscribe_socket.hpp  nng_req_rsp_client_socket.hpp  nng_socket_factory.hpp  nng_subscribe_socket.hpp
include/cppplumberd/proto/: cqrs.pb.cc  cqrs.pb.h
include/proto/: proto_publish_handler.hpp
proto/: CMakeLists.txt  cqrs.pb.cc  cqrs.proto
tests/: CMakeLists.txt  contract.h  nng.cpp  plumberd_command_flow_e2e.cpp  plumberd_event_flow_e2e.cpp  proto_pub_sub_handlers_tests.cpp  proto_publish_handler_tests.cpp  proto_req_rsp_handlers_tests.cpp  test_cppplumberd.cpp  transport_tests.cpp
tests/proto/: messages.proto  test_msgs.proto
